chore: Still didn't fix it, so I turned off the horizontal scroll bar

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,6 +12,9 @@
         --index-card-swiper-button: #fff;
     }
 }
+body{
+    overflow-x: hidden;
+}
 .indexHeader{
     position: relative;
     left: 0px;
